--- a/SwiftTopStars/SwiftTopStars/Scenes/ListRepos/TopRatedReposViewController.xib
+++ b/SwiftTopStars/SwiftTopStars/Scenes/ListRepos/TopRatedReposViewController.xib
@@ -1,22 +1,66 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TopRatedReposViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TopRatedReposViewController" customModule="SwiftTopStars" customModuleProvider="target">
             <connections>
+                <outlet property="tableView" destination="mMX-Mm-JjO" id="o8k-zH-bdv"/>
+                <outlet property="titleTopConstraint" destination="t54-HF-cku" id="Jy2-lI-iTD"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lh8-j0-fDp">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Top GitHub Repositories" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eyt-AX-Ijx">
+                            <rect key="frame" x="98" y="115" width="218" height="24"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="24" id="fua-jm-Kle"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="Helvetica-Light" family="Helvetica" pointSize="20"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" red="0.50980392156862742" green="0.70588235294117641" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="250" id="0jd-Kk-2pd"/>
+                        <constraint firstItem="Eyt-AX-Ijx" firstAttribute="centerX" secondItem="lh8-j0-fDp" secondAttribute="centerX" priority="100" id="Tt9-Xb-JOU"/>
+                        <constraint firstItem="Eyt-AX-Ijx" firstAttribute="top" secondItem="lh8-j0-fDp" secondAttribute="top" constant="115" id="t54-HF-cku"/>
+                    </constraints>
+                </view>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" sectionIndexMinimumDisplayRowCount="22" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mMX-Mm-JjO">
+                    <rect key="frame" x="10" y="147.5" width="394" height="714.5"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="separatorColor" red="0.50980392159999999" green="0.70588235290000001" blue="1" alpha="0.3649017995356037" colorSpace="custom" customColorSpace="sRGB"/>
+                    <inset key="separatorInset" minX="30" minY="0.0" maxX="30" maxY="0.0"/>
+                </tableView>
+            </subviews>
+            <color key="backgroundColor" red="0.96078431372549022" green="0.96862745098039216" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="lh8-j0-fDp" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="1zv-Cf-Sy9"/>
+                <constraint firstItem="lh8-j0-fDp" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="4sQ-fH-Y5v"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="mMX-Mm-JjO" secondAttribute="trailing" constant="10" id="9xw-nd-0UL"/>
+                <constraint firstItem="mMX-Mm-JjO" firstAttribute="firstBaseline" secondItem="Eyt-AX-Ijx" secondAttribute="baseline" constant="13" symbolType="layoutAnchor" id="AQr-3h-tQt"/>
+                <constraint firstItem="lh8-j0-fDp" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="UwI-Zt-zSp"/>
+                <constraint firstItem="mMX-Mm-JjO" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="10" id="X8E-c1-ZPj"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="mMX-Mm-JjO" secondAttribute="bottom" id="yHA-9m-pZ0"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="144.92753623188406" y="35.491071428571423"/>
         </view>
     </objects>
 </document>
