--- a/SwiftTopStars/SwiftTopStars/Scenes/ListRepos/TopRatedReposViewController.xib
+++ b/SwiftTopStars/SwiftTopStars/Scenes/ListRepos/TopRatedReposViewController.xib
@@ -12,9 +12,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TopRatedReposViewController" customModule="SwiftTopStars" customModuleProvider="target">
             <connections>
+                <outlet property="backgroundTopHeightConstraint" destination="0jd-Kk-2pd" id="un4-ez-h4m"/>
                 <outlet property="tableView" destination="mMX-Mm-JjO" id="o8k-zH-bdv"/>
                 <outlet property="titleTopConstraint" destination="t54-HF-cku" id="Jy2-lI-iTD"/>
+                <outlet property="topLeftConstraint" destination="UwI-Zt-zSp" id="sOP-PW-2DJ"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outletCollection property="tableViewSideConstraint" destination="9xw-nd-0UL" collectionClass="NSMutableArray" id="pYu-vn-QKK"/>
+                <outletCollection property="tableViewSideConstraint" destination="UwI-Zt-zSp" collectionClass="NSMutableArray" id="zv7-DM-9bb"/>
+                <outletCollection property="tableViewSideConstraint" destination="X8E-c1-ZPj" collectionClass="NSMutableArray" id="5tj-mV-JrJ"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -52,11 +57,11 @@
             <color key="backgroundColor" red="0.96078431372549022" green="0.96862745098039216" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="lh8-j0-fDp" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="1zv-Cf-Sy9"/>
-                <constraint firstItem="lh8-j0-fDp" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="4sQ-fH-Y5v"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="mMX-Mm-JjO" secondAttribute="trailing" constant="15" id="9xw-nd-0UL"/>
+                <constraint firstItem="lh8-j0-fDp" firstAttribute="trailing" secondItem="i5M-Pr-FkT" secondAttribute="trailing" id="4sQ-fH-Y5v"/>
+                <constraint firstAttribute="trailing" secondItem="mMX-Mm-JjO" secondAttribute="trailing" constant="15" id="9xw-nd-0UL"/>
                 <constraint firstItem="mMX-Mm-JjO" firstAttribute="firstBaseline" secondItem="Eyt-AX-Ijx" secondAttribute="baseline" constant="13" symbolType="layoutAnchor" id="AQr-3h-tQt"/>
-                <constraint firstItem="lh8-j0-fDp" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="UwI-Zt-zSp"/>
-                <constraint firstItem="mMX-Mm-JjO" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="15" id="X8E-c1-ZPj"/>
+                <constraint firstItem="lh8-j0-fDp" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="UwI-Zt-zSp"/>
+                <constraint firstItem="mMX-Mm-JjO" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="X8E-c1-ZPj"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="mMX-Mm-JjO" secondAttribute="bottom" id="yHA-9m-pZ0"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
